# oracle-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlite.db
.github/workflows/: ci.yml
migrations/: 20230521061658_contract_base_fee_sums.down.sql  20230521061658_contract_base_fee_sums.up.sql  20230521061658_price_value_attestations.down.sql  20230521061658_price_value_attestations.up.sql  20230521105847_price_interval_attestations.down.sql  20230521105847_price_interval_attestations.up.sql  20230522052218_aggregated_interval_attestations.down.sql  20230522052218_aggregated_interval_attestations.up.sql
src/: lib.rs
test_data/input/: 17292025.json  6556020.json
